FIX: spacing

--- a/static/default.css
+++ b/static/default.css
@@ -144,6 +144,11 @@ textarea {
 }
 
 
+#insert-comment-section .flex-item {
+    margin-bottom: 1rem;
+}
+
+
 
 @media only screen and (max-width: 730px) {
     .flex-responsive {
